# vremennie-ryadi

./: pyproject.toml
lab1/: Milin_lab1.ipynb  WineTEST  WineTRAIN  yogaTRAIN
lab2/: laba2.ipynb
lab3/: laba3.ipynb
lab4/: Milin_lab4.ipynb
lab5/: Milin_lab5.ipynb
lab6/: Milin_lab6.ipynb
laba3/: passengers2.csv  passengers2_filled_smoothed.csv
