[project]
name = "vremennie-ryadi"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "prophet (>=1.2.1,<2.0.0)",
    "nbformat >=4.2.0",
    "statsmodels (>=0.14.5,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
